deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: t24-data-retrieval-deployment
spec:
  selector:
    matchLabels:
      app: t24-data-retrieval-app
  replicas: 2
  template:
    metadata:
      labels:
        app: t24-data-retrieval-app
    spec:
      containers:
      - name: t24-data-retrieval-app
        image: t24-data-retrieval-app
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: t24-data-retrieval-service
spec:
  type: NodePort
  selector:
    app: t24-data-retrieval-app
  ports:
  - protocol: TCP
    port: 8085
    targetPort: 8080
    nodePort: 31111
