ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: t24-data-retrieval-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: t24-data-service.info
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: t24-data-retrieval-service
            port:
              number: 8085
